# prodigy-pdf

./: README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: unit_tests.yml
prodigy_pdf/: __init__.py  spans.py
tests/: test_basics.py
