[metadata]
version = 0.0.2
description = Recipes for PDF annotation
url = https://github.com/explosion/prodigy-pdf
author = Explosion
author_email = contact@explosion.ai

[options]
zip_safe = true
python_requires = >=3.8
install_requires =
    pypdfium2==4.20.0
    Pillow==9.4.0

[options.entry_points]
prodigy_recipes =
    pdf.image.manual = prodigy_pdf:pdf_image_manual

[bdist_wheel]
universal = true

[sdist]
formats = gztar
