[metadata]
version = 0.4.0
description = Recipes for PDF annotation
url = https://github.com/explosion/prodigy-pdf
author = Explosion
author_email = contact@explosion.ai

[options]
zip_safe = true
python_requires = >=3.8
install_requires =
    pypdfium2>=4.20.0
    Pillow<11.0.0
    pytesseract==0.3.10
    numpy<2.0.0
    spacy-layout>=0.0.4
    prodigy>=1.17.1

[options.entry_points]
prodigy_recipes =
    pdf.image.manual = prodigy_pdf:pdf_image_manual
    pdf.spans.manual = prodigy_pdf.spans:pdf_spans_manual

[bdist_wheel]
universal = true

[sdist]
formats = gztar
